--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   dio: ^5.1.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   go_router: ^7.1.1
-  riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
