--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   dio: ^5.1.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.3.6
+  formz: ^0.6.0
   go_router: ^7.1.1
 
 dev_dependencies:
@@ -21,3 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
