--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   formz: ^0.6.0
   go_router: ^7.1.1
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
