--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,18 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.3.6
   formz: ^0.6.0
+  get_it: ^7.6.0
   go_router: ^7.1.1
   google_fonts: ^5.1.0
+  json_annotation: ^4.8.1
   shared_preferences: ^2.1.2
 
 dev_dependencies:
+  build_runner: ^2.4.7
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
