--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   google_fonts: ^5.1.0
   json_annotation: ^4.8.1
   shared_preferences: ^2.1.2
+  flutter_speed_dial: ^7.0.0
+  multi_dropdown: ^2.1.3
 
 dev_dependencies:
   build_runner: ^2.4.7
