--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   animate_do: ^3.0.2
-  dio: ^5.1.2
+  dio: ^5.4.2+1
   firebase_auth: ^4.0.0
   firebase_core: ^2.13.1
   flutter:
